# demoplugin

./: CMakeLists.txt  README.md
api/: PluginInterface.h  Structures.h
include/: ServerConfig.h  TradeCommenter.h
src/: ServerConfig.cpp  TradeCommenter.cpp
